--- a/octopus/index.html
+++ b/octopus/index.html
@@ -1489,14 +1489,14 @@
             <div class="how-content" style="text-align: center;">
                 <p class="section-label">Tarifs</p>
                 <h2 class="section-title">Choisissez votre cercle</h2>
-                <p class="section-subtitle">Accès à vie • Vous payez uniquement les nouveaux bras • Pieuvre livrée par email • Satisfait ou remboursé 30 jours</p>
+                <p class="section-subtitle">Accès à vie • Pieuvre livrée par email • Satisfait ou remboursé 30 jours</p>
 
                 <div class="pricing-grid">
-                    <!-- Cercle Duo -->
+                    <!-- Cercle Pair -->
                     <div class="pricing-card">
-                        <div class="pricing-icon">🐙</div>
-                        <h3 class="pricing-name">Cercle Duo</h3>
-                        <p class="pricing-users">2 bras • à vie</p>
+                        <div class="pricing-icon">🤝</div>
+                        <h3 class="pricing-name">Cercle Pair</h3>
+                        <p class="pricing-users">2 places • à vie</p>
                         <div class="pricing-price">200€ <span>TTC</span></div>
                         <p class="pricing-period">Paiement unique</p>
                         <ul class="pricing-features">
@@ -1510,15 +1510,15 @@
 
                     <!-- Cercle 5 -->
                     <div class="pricing-card popular">
-                        <div class="pricing-icon">👨‍👩‍👧‍👦</div>
+                        <div class="pricing-icon">🏠</div>
                         <h3 class="pricing-name">Cercle 5</h3>
-                        <p class="pricing-users">5 bras • à vie</p>
+                        <p class="pricing-users">5 places • à vie</p>
                         <div class="pricing-price">425€ <span>TTC</span></div>
-                        <p class="pricing-period">Pack avantage • 85€/bras</p>
+                        <p class="pricing-period">Pack avantage • 85€/place</p>
                         <ul class="pricing-features">
                             <li>Pieuvre envoyée par email</li>
                             <li>Messages illimités</li>
-                            <li>Ajout de bras possible</li>
+                            <li>Ajout de places possible</li>
                             <li>Renouvellement gratuit (perte/vol)</li>
                         </ul>
                         <a href="./order.html?plan=cercle5" class="btn-primary pricing-btn">Choisir</a>
@@ -1526,18 +1526,18 @@
 
                     <!-- Nouvel entrant -->
                     <div class="pricing-card">
-                        <div class="pricing-icon">➕</div>
-                        <h3 class="pricing-name">Nouveau bras</h3>
-                        <p class="pricing-users">+1 bras • à vie</p>
+                        <div class="pricing-icon">🔑</div>
+                        <h3 class="pricing-name">Nouvelle place</h3>
+                        <p class="pricing-users">+1 place • à vie</p>
                         <div class="pricing-price">75€ <span>TTC</span></div>
                         <p class="pricing-period">Pour agrandir le cercle</p>
                         <ul class="pricing-features">
-                            <li>Ajoute 1 bras au cercle</li>
+                            <li>Ajoute 1 place au cercle</li>
                             <li>Nouvelle pieuvre pour tous</li>
-                            <li>Les anciens bras ne repayent pas</li>
+                            <li>Les membres existants ne repayent pas</li>
                             <li>Support email</li>
                         </ul>
-                        <a href="./order.html?plan=nouveau-bras" class="btn-primary pricing-btn">Ajouter</a>
+                        <a href="./order.html?plan=nouvelle-place" class="btn-primary pricing-btn">Ajouter</a>
                     </div>
                 </div>
 
@@ -1571,7 +1571,7 @@
                 <div class="student-price-item">
                     <div class="original">200€</div>
                     <div class="discounted">100€ <span>TTC</span></div>
-                    <div class="label">Cercle Duo</div>
+                    <div class="label">Cercle Pair</div>
                 </div>
                 <div class="student-price-item">
                     <div class="original">425€</div>
@@ -1581,7 +1581,7 @@
                 <div class="student-price-item">
                     <div class="original">75€</div>
                     <div class="discounted">37€ <span>TTC</span></div>
-                    <div class="label">Nouveau bras</div>
+                    <div class="label">Nouvelle place</div>
                 </div>
             </div>
 
