--- a/octopus/demo.html
+++ b/octopus/demo.html
@@ -2463,8 +2463,8 @@
         });
         
         // ==================== API & WEBSOCKET ====================
-        const API_URL = 'https://api.octopus.asemantix.tech';
-        const WS_URL = 'wss://api.octopus.asemantix.tech/ws';
+        const API_URL = 'https://octopus-backend-production.up.railway.app';
+        const WS_URL = 'wss://octopus-backend-production.up.railway.app/ws';
         let ws = null;
         let reconnectAttempts = 0;
         const MAX_RECONNECT_ATTEMPTS = 5;
